--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
 		<ul>
                             <li><a href="http://5genvpiao.com/" target="_blank">五姑娘导航</a></li>
                             <li><a href="http://landh.club/" target="_blank">蓝导航</a></li>
-                            <li><a href="http://g.e20.ru/" target="_blank">绿色小导航</a></li> 
-                            <li><a href="http://500dh.cc/" target="_blank">500导航</a></li>
+                            <li><a href="http://g.e20.ru/" target="_blank">绿色小导航</a></li>
+                            <li><a href="http://doufu2.com/" target="_blank">豆福色导航</a></li> 
                             <li><a href="http://www.xinfuli.info/" target="_blank">新福利导航</a></li>
                             <li><a href="http://www.xiushe.info/" target="_blank">羞射福利导航</a></li>                            
                             <li><a href="http://www.09kg.com/" target="_blank">第九福利导航</a></li>
@@ -172,7 +172,7 @@
                             <li><a href="http://www.haoavdh.com/" target="_blank">找AV导航</a></li>
                             <li><a href="http://www.javavdh.com/" target="_blank">Javav导航</a></li>
                             <li><a href="http://att12.com/" target="_blank">A天堂导航</a></li>
-                            <li><a href="http://doufu2.com/" target="_blank">豆福色导航</a></li>
+                            <li><a href="http://500dh.cc/" target="_blank">500导航</a></li>
                             <li><a href="http://www.dabodh.com/" target="_blank">大波导航</a></li>
                             <li><a href="http://74fuli.net/" target="_blank">骑士福利导航</a></li>
                             <li><a href="http://bigefuli.com/" target="_blank">逼格福利导航</a></li>
@@ -242,6 +242,7 @@
 <li><a href="http://www.rraiav.com/" target="_blank">夜夜爱AV</a></li>
 <li><a href="http://www.3pfun.ga/" target="_blank">3pfun</a></li>
 <li><a href="http://ziyule.xyz/" target="_blank">自娱乐</a></li>
+<li><a href="http://www.taoluyingyuan.com/" target="_blank">套路影院</a></li>
 <li><a href="http://www.wpzy7.com/" target="_blank">超碰</a></li>
 <li><a href="http://9388av.com/" target="_blank">撸你妹吖</a></li>
 <li><a href="http://www.159cb.com/" target="_blank">159cb在线</a></li>
@@ -249,9 +250,10 @@
 <li><a href="http://www.tvtv98.com/" target="_blank">婷婷五月</a></li>
 <li><a href="http://taohua888.info/" target="_blank">桃花视频</a></li>
 <li><a href="http://www.langnizi.com/" target="_blank">浪妮子视频</a></li>
+<li><a href="http://www.7u8e.com/" target="_blank">7菇8姨</a></li>
 <li><a href="http://www.lxx01.co/" target="_blank">撸穴穴</a></li>
 <li><a href="http://www.56avs.us/" target="_blank">沃流视频</a></li>
-<li><a href="http://www.7u8e.com/" target="_blank">7菇8姨</a></li>
+<li><a href="http://www.youzzjj.xyz/" target="_blank">优优在线AV</a></li>
 <li><a href="http://www.fx1200.com/" target="_blank">咪咪影院</a></li>
 <li><a href="http://meisezx.com/" target="_blank">魅色在线</a></li>
 <li><a href="http://www.fhmmav.com/" target="_blank">粉红妹妹</a></li>
@@ -262,7 +264,6 @@
 <li><a href="http://www.92sheav.win/" target="_blank">就爱射AV</a></li>
 <li><a href="http://www.912hh.vip/" target="_blank">912在线AV</a></li>
 <li><a href="http://www.cpzx1.pw/" target="_blank">超碰视频</a></li>
-<li><a href="http://www.taoluyingyuan.com/" target="_blank">套路影院</a></li>
 <li><a href="http://www.91lupao.com/" target="_blank">狠撸炮</a></li>
 <li><a href="http://qisevd.com/" target="_blank">奇色视频</a></li>
 <li><a href="http://benselulu.com/" target="_blank">本色视频</a></li>
@@ -308,8 +309,11 @@
 <li><a href="http://www.vod30.com/" target="_blank">VOD视频</a></li>
 <li><a href="http://www.36gao.com/" target="_blank">haodiaose</a></li>
 <li><a href="http://vod23.com/" target="_blank">VOD视屏</a></li>
+<li><a href="http://www.avtai3.com/" target="_blank">AvTai</a></li>
+<li><a href="http://www.95gav.com/" target="_blank">91GAV</a></li>
 <li><a href="http://8833hao.com/" target="_blank">995hao</a></li>
 <li><a href="http://caoporn.pink/" target="_blank">CaoPorn</a></li>
+<li><a href="http://www.tuxse.com/" target="_blank">超碰在线</a></li>
 <li><a href="http://www.vid999.com/" target="_blank">vid999</a></li>
 <li><a href="http://huaidushi.info/" target="_blank">坏都市</a></li>
 <li><a href="http://www.600zyz.com/" target="_blank">97资源站</a></li>
@@ -317,6 +321,7 @@
 <li><a href="https://www.w832.com/" target="_blank">202z</a></li>
 <li><a href="http://www.fcw.xxx/" target="_blank">废柴网</a></li>
 <li><a href="http://www.twav12.com/" target="_blank">AV中文</a></li>
+<li><a href="http://kuav.tv/" target="_blank">高清在线AV</a></li>
 <li><a href="http://www.youppp.com/" target="_blank">有B吗？</a></li>
 <li><a href="http://www.av8d.co/" target="_blank">琪琪涩原</a></li>
 <li><a href="http://www.777vid.com/" target="_blank">PLAY 视频</a></li>
