--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <li><a href="http://www.mf28.xyz/" target="_blank">蜜蜂社区</a></li>
 <li><a href="http://twhav.com/?fromuid=73855" target="_blank">天空论坛</a></li>
 <li><a href="http://www.99hdgc.com/?fromuid=320" target="_blank">99爱唯工厂</a></li>
-<li><a href="http://166.62.61.163/?fromuid=16201" target="_blank">涩呢妹·SNM</a></li>
+<li><a href="http://107.180.71.83/?fromuid=16201" target="_blank">涩呢妹·SNM</a></li>
 <li><a href="http://162.211.95.61/bbs/?fromuid=715" target="_blank">老王社区</a></li>
 <li><a href="http://fuli3758.com/" target="_blank">福利社小说</a></li>
 <li><a href="http://www.yinshuku.com/" target="_blank">银书库</a></li>
@@ -257,7 +257,7 @@
 <li><a href="http://www.fx1200.com/" target="_blank">咪咪影院</a></li>
 <li><a href="http://meisezx.com/" target="_blank">魅色在线</a></li>
 <li><a href="http://www.fhmmav.com/" target="_blank">粉红妹妹</a></li>
-<li><a href="http://www.avlu22.com/" target="_blank">撸啊撸</a></li>
+<li><a href="http://avlu.biz/" target="_blank">撸啊撸</a></li>
 <li><a href="http://www.ikanav.com/" target="_blank">爱看AV</a></li>
 <li><a href="http://www.db66.cc/" target="_blank">AV在线视频</a></li>
 <li><a href="http://www.91sheav.win/" target="_blank">就要射AV</a></li>
@@ -294,6 +294,7 @@
 <li><a href="http://www.xxoo.tm/" target="_blank">男人本涩</a></li>
 <li><a href="http://a7s7.com/" target="_blank">Sex169影城</a></li>
 <li><a href="http://hot1024.win/" target="_blank">18AV</a></li>
+<li><a href="http://www.7mav.net/" target="_blank">7M视频</a></li>
 <li><a href="http://avpapa.co/" target="_blank">Avpapa</a></li>
 <li><a href="http://www.5xsq123.com/" target="_blank">5X社区</a></li>
 <li><a href="http://www.yeshemao520.top/" target="_blank">夜涩猫</a></li>
@@ -670,13 +671,14 @@
 		<strong><a name="/14/">美图街拍</a></strong>
 		<div class="linkl">
 		<ul>
-<li><a href="http://91.t9j.space/?fromuid=697480" target="_blank">91自拍论坛</a></li>
+<li><a href="http://91.t9l.space/?fromuid=697480" target="_blank">91自拍论坛</a></li>
 <li><a href="http://www.3515.pw/" target="_blank">爱心社</a></li>
 <li><a href="http://www.bzjkzc.com/" target="_blank">福利gif出处</a></li>
 <li><a href="http://www.bvfpei.com/" target="_blank">邪恶GIF</a></li>
 <li><a href="http://www.nucvrj.com/" target="_blank">美女生活照</a></li>
 <li><a href="http://www.ixieegif.com/" target="_blank">哆乐动图</a></li>
 <li><a href="http://www.caoliufan.com/" target="_blank">潮榴番</a></li>
+<li><a href="http://91.t9j.space/?fromuid=697480" target="_blank">91自拍论坛</a></li>
 <li><a href="http://www.lu46.com/?fromuid=82145" target="_blank">街拍帮</a></li>
 <li><a href="http://www.jp95.com/?fromuid=672975" target="_blank">街拍第一站</a></li>
 <li><a href="http://www.kacajp.com/?fromuid=12755" target="_blank">喀嚓街拍网</a></li>
