--- a/index.html
+++ b/index.html
@@ -158,64 +158,66 @@
 		<strong><a name="/4/">导航网站</a></strong><strong style="padding:0 185px;color:#FF9900;font-size:15px;font-family:Microsoft YaHei;">发送任意邮件到<font color="#7CFC00">6dizhi@gmail.com</font>，自动回复蓝色小导航最新地址</strong>
 		<div class="linkl">
 		<ul>
-                            <li><a href="http://5genvpiao.com/" target="_blank">五姑娘导航</a></li>
-                            <li><a href="http://landh.club/" target="_blank">蓝导航</a></li>
-                            <li><a href="http://g.e20.ru/" target="_blank">绿色小导航</a></li>
-                            <li><a href="http://doufu2.com/" target="_blank">豆福色导航</a></li> 
-                            <li><a href="http://www.xinfuli.info/" target="_blank">新福利导航</a></li>
-                            <li><a href="http://www.xiushe.info/" target="_blank">羞射福利导航</a></li>                            
-                            <li><a href="http://www.09kg.com/" target="_blank">第九福利导航</a></li>
-                            <li><a href="http://www.3031177.com/" target="_blank">通幽福利导航</a></li>
-                            <li><a href="http://www.hhzjzz.com/" target="_blank">蜜汁福利导航</a></li>
-                            <li><a href="http://www.xionzhan.com/" target="_blank">你懂得福利导航</a></li>
-                            <li><a href="http://www.fulidh.info/" target="_blank">夜火福利导航</a></li>
-                            <li><a href="http://www.haoavdh.com/" target="_blank">找AV导航</a></li>
-                            <li><a href="http://www.javavdh.com/" target="_blank">Javav导航</a></li>
-                            <li><a href="http://att12.com/" target="_blank">A天堂导航</a></li>
-                            <li><a href="http://500dh.cc/" target="_blank">500导航</a></li>
-                            <li><a href="http://www.dabodh.com/" target="_blank">大波导航</a></li>
-                            <li><a href="http://74fuli.net/" target="_blank">骑士福利导航</a></li>
-                            <li><a href="http://bigefuli.com/" target="_blank">逼格福利导航</a></li>
-                            <li><a href="http://www.776dh.com/" target="_blank">776福利导航</a></li>
-                            <li><a href="http://www.666k6.com/" target="_blank">666福利导航</a></li>
-                            <li><a href="http://www.uusdh.com/" target="_blank">悠悠色导航</a></li>
-                            <li><a href="http://www.idiyi.biz/" target="_blank">第一色导航</a></li>
-                            <li><a href="https://www.gavdh.com/" target="_blank">GAV福利导航</a></li>
-                            <li><a href="http://www.damodh.com/" target="_blank">51VOB导航</a></li>
-                            <li><a href="http://www.semmdh.net/" target="_blank">色妹妹导航</a></li>
-                            <li><a href="http://www.pigutu.cc/" target="_blank">第一福利导航</a></li>
-                            <li><a href="http://www.chaxue.pw/" target="_blank">插穴福利导航</a></li>
-                            <li><a href="http://www.caoporn5.info/" target="_blank">超碰福利导航</a></li>
-                            <li><a href="http://www.baihudh.info/" target="_blank">白虎福利导航</a></li>
-                            <li><a href="http://ailovedh.com/" target="_blank">大爱导航</a></li>
-                            <li><a href="http://www.seevdo18.ga/" target="_blank">大人导航</a></li>
-                            <li><a href="http://www.soavdh.net/" target="_blank">搜AV导航</a></li>
-                            <li><a href="http://www.chihandh.com/" target="_blank">痴汉导航</a></li>
-                            <li><a href="http://nimadaohang.com/" target="_blank">尼玛导航</a></li>
-                            <li><a href="http://www.lw78.cc/" target="_blank">老王福利导航</a></li>
-                            <li><a href="http://lvjiabai1.info/" target="_blank">绿加白导航</a></li>
-                            <li><a href="http://www.sechungege.com/" target="_blank">色春阁导航</a></li>
-                            <li><a href="http://www.dccwl.com/" target="_blank">色慰导航</a></li>
-							<li><a href="http://www.fulisao.net/" target="_blank">福利嫂宅男导航</a></li>
-							<li><a href="http://www.yikudh.cc/" target="_blank">一库福利导航</a></li>
-                            <li><a href="http://69dh.top/" target="_blank">69宅男福利导航</a></li>
-							<li><a href="http://www.gvgvdh.com/" target="_blank">GVGV导航</a></li>
-							<li><a href="http://www.caoluotuo.com/" target="_blank">草骆驼福利导航</a></li>
-                            <li><a href="http://dh.19xa.com/" target="_blank">福利导航</a></li>
-                            <li><a href="http://www.fulidg.cc/" target="_blank">福利帝国導航</a></li>
-                            <li><a href="http://dh.hfuli.com/" target="_blank">H福利导航</a></li>
-                            <li><a href="http://www.fulisuo2.com/" target="_blank">福利所</a></li>
-                            <li><a href="http://www.jijidh.com/" target="_blank">吉吉导航</a></li>
-                            <li><a href="http://www.qiqidh.com/" target="_blank">琪琪导航</a></li>
-                            <li><a href="http://www.znfl777.top/" target="_blank">黑木耳导航</a></li>
-                            <li><a href="http://900010.la/" target="_blank">900010导航</a></li>
-                            <li><a href="http://www.dafjdh.com/" target="_blank">打飞机导航</a></li>
-                            <li><a href="http://yeyeliu.top/" target="_blank">夜夜流</a></li>
-                            <li><a href="http://www.cangjigedh.com/" target="_blank">藏姬阁导航</a></li>
-                            <li><a href="http://www.1dh.info/" target="_blank">S站第一导航</a></li>
-                            <li><a href="http://www.jpmdh.info/" target="_blank">金瓶梅福利导航</a></li>
-                                                         
-				    </ul>
+<li><a href="http://5genvpiao.com/" target="_blank">五姑娘导航</a></li>
+<li><a href="http://landh.club/" target="_blank">蓝导航</a></li>
+<li><a href="http://www.bagunian.info/" target="_blank">八姑娘导航</a></li>
+<li><a href="http://g.e20.ru/" target="_blank">绿色小导航</a></li>
+<li><a href="http://doufu2.com/" target="_blank">豆福色导航</a></li> 
+<li><a href="http://www.xinfuli.info/" target="_blank">新福利导航</a></li>
+<li><a href="http://www.xiushe.info/" target="_blank">羞射福利导航</a></li>                            
+<li><a href="http://www.09kg.com/" target="_blank">第九福利导航</a></li>
+<li><a href="http://www.3031177.com/" target="_blank">通幽福利导航</a></li>
+<li><a href="http://www.hhzjzz.com/" target="_blank">蜜汁福利导航</a></li>
+<li><a href="http://www.xionzhan.com/" target="_blank">你懂得福利导航</a></li>
+<li><a href="http://www.fulidh.info/" target="_blank">夜火福利导航</a></li>
+<li><a href="http://www.haoavdh.com/" target="_blank">找AV导航</a></li>
+<li><a href="http://www.javavdh.com/" target="_blank">Javav导航</a></li>
+<li><a href="http://att12.com/" target="_blank">A天堂导航</a></li>
+<li><a href="http://500dh.cc/" target="_blank">500导航</a></li>
+<li><a href="http://www.dabodh.com/" target="_blank">大波导航</a></li>
+<li><a href="http://74fuli.net/" target="_blank">骑士福利导航</a></li>
+<li><a href="http://bigefuli.com/" target="_blank">逼格福利导航</a></li>
+<li><a href="http://www.776dh.com/" target="_blank">776福利导航</a></li>
+<li><a href="http://www.666k6.com/" target="_blank">666福利导航</a></li>
+<li><a href="http://www.uusdh.com/" target="_blank">悠悠色导航</a></li>
+<li><a href="http://www.idiyi.biz/" target="_blank">第一色导航</a></li>
+<li><a href="https://www.gavdh.com/" target="_blank">GAV福利导航</a></li>
+<li><a href="http://www.damodh.com/" target="_blank">51VOB导航</a></li>
+<li><a href="http://www.semmdh.net/" target="_blank">色妹妹导航</a></li>
+<li><a href="http://www.pigutu.cc/" target="_blank">第一福利导航</a></li>
+<li><a href="http://www.chaxue.pw/" target="_blank">插穴福利导航</a></li>
+<li><a href="http://www.caoporn5.info/" target="_blank">超碰福利导航</a></li>
+<li><a href="http://www.baihudh.info/" target="_blank">白虎福利导航</a></li>
+<li><a href="http://ailovedh.com/" target="_blank">大爱导航</a></li>
+<li><a href="http://www.seevdo18.ga/" target="_blank">大人导航</a></li>
+<li><a href="http://www.soavdh.net/" target="_blank">搜AV导航</a></li>
+<li><a href="http://www.chihandh.com/" target="_blank">痴汉导航</a></li>
+<li><a href="http://nimadaohang.com/" target="_blank">尼玛导航</a></li>
+<li><a href="http://www.lw78.cc/" target="_blank">老王福利导航</a></li>
+<li><a href="http://lvjiabai1.info/" target="_blank">绿加白导航</a></li>
+<li><a href="http://www.sechungege.com/" target="_blank">色春阁导航</a></li>
+<li><a href="http://www.dccwl.com/" target="_blank">色慰导航</a></li>
+<li><a href="http://www.fulisao.net/" target="_blank">福利嫂宅男导航</a></li>
+<li><a href="http://www.yikudh.cc/" target="_blank">一库福利导航</a></li>
+<li><a href="http://69dh.top/" target="_blank">69宅男福利导航</a></li>
+<li><a href="http://www.gvgvdh.com/" target="_blank">GVGV导航</a></li>
+<li><a href="http://www.caoluotuo.com/" target="_blank">草骆驼福利导航</a></li>
+<li><a href="http://dh.19xa.com/" target="_blank">福利导航</a></li>
+<li><a href="http://www.fulidg.cc/" target="_blank">福利帝国導航</a></li>
+<li><a href="http://dh.hfuli.com/" target="_blank">H福利导航</a></li>
+<li><a href="http://www.fulisuo2.com/" target="_blank">福利所</a></li>
+<li><a href="http://www.jijidh.com/" target="_blank">吉吉导航</a></li>
+<li><a href="http://www.qiqidh.com/" target="_blank">琪琪导航</a></li>
+<li><a href="http://www.znfl777.top/" target="_blank">黑木耳导航</a></li>
+<li><a href="http://900010.la/" target="_blank">900010导航</a></li>
+<li><a href="http://www.dafjdh.com/" target="_blank">打飞机导航</a></li>
+<li><a href="http://yeyeliu.top/" target="_blank">夜夜流</a></li>
+<li><a href="http://www.cangjigedh.com/" target="_blank">藏姬阁导航</a></li>
+<li><a href="http://www.1dh.info/" target="_blank">S站第一导航</a></li>
+<li><a href="http://www.jpmdh.info/" target="_blank">金瓶梅福利导航</a></li>
+<li><a href="http://91xfdh.com/" target="_blank">91性福导航</a></li>
+<li><a href="http://www.ds555.cc/" target="_blank">男人福利導航</a></li>
+                    </ul>
 		</div>
 		</div>
 		</div>
@@ -224,9 +226,10 @@
 		<strong><a name="/5/">国内视频</a></strong>
 		<div class="linkl">
 		<ul>
+<li><a href="http://www.youzzjj.xyz/" target="_blank">优优在线AV</a></li>
 <li><a href="http://qusiji.com/" target="_blank">老司机视频</a></li>
 <li><a href="http://87big.com/" target="_blank">87自拍视频</a></li>
-<li><a href="http://www.caoliuporn.com/" target="_blank">caoliu视频</a></li>
+<li><a href="http://qusiji.com/" target="_blank">老司机视频</a></li>
 <li><a href="http://www.caoiii.net/" target="_blank">超爱视频</a></li>
 <li><a href="http://laoshiji3758.com/" target="_blank">天天爱视频</a></li>
 <li><a href="http://yingtaopa.com/" target="_blank">樱桃视频</a></li>
@@ -427,7 +430,7 @@
 <li><a href="http://www.bigbreastarchive.com/" target="_blank">大奶图片</a></li>
 <li><a href="http://www.foxhq.com/" target="_blank">爆乳丰臀画廊</a></li>
 <li><a href="http://www.farangdingdong.com/" target="_blank">FarangDingDong</a></li>
-<li><a href="http://www.ltz3.info/?fromuid=273955" target="_blank">恋臀者</a></li>
+<li><a href="http://www.ltz4.info/?fromuid=273955" target="_blank">恋臀者</a></li>
 <li><a href="http://www.assdream.com/" target="_blank">Ass Dream</a></li>
 <li><a href="http://www.abigass.com/" target="_blank">ABigAss</a></li>
 <li><a href="http://www.siwaluntan.com/?fromuid=564142" target="_blank">丝袜论坛</a></li>
@@ -536,7 +539,7 @@
 <li><a href="http://www.puahome.com/" target="_blank">坏男孩</a></li>
 <li><a href="http://lieqizhijia.com/" target="_blank">猎奇之家</a></li>
 <li><a href="http://www.bocaishequ.cn/?u=4509" target="_blank">菠菜社区</a></li>
-<li><a href="https://tuo8.club/" target="_blank">月兑会</a></li>
+<li><a href="https://103.3.60.42/" target="_blank">月兑会</a></li>
 <li><a href="http://bbs.jjwxc.net/" target="_blank">晋江文学城</a></li>
 <li><a href="http://www.4u77.com/" target="_blank">变装家园</a></li>
 <li><a href="http://www.pt80.net/" target="_blank">捌零音乐论坛</a></li>
@@ -785,15 +788,17 @@
 <li><a href="http://www.btse69.com/" target="_blank">图图资源</a></li>
 <li><a href="http://bt.gg/" target="_blank">短磁链</a></li>
 <li><a href="https://btdb.in/" target="_blank">BTDB</a></li>
-<li><a href="http://www.cilibaba.com/" target="_blank">CiLiBaBa</a></li>
+<li><a href="http://www.cilibaba.org/" target="_blank">CiLiBaBa</a></li>
 <li><a href="http://www.ciliwo.com/" target="_blank">磁力窝</a></li>
+<li><a href="https://www.ciliwan.com/" target="_blank">磁力湾</a></li>
 <li><a href="http://www.cilihome.com/" target="_blank">磁力之家</a></li>
 <li><a href="http://www.yunbosou.cc/" target="_blank">云播搜</a></li>
 <li><a href="http://www.btcherry.org/" target="_blank">BT樱桃</a></li>
 <li><a href="http://www.btkuaisou.cc/" target="_blank">BT快搜</a></li>
+<li><a href="http://bt2.bt87.cc/" target="_blank">BT搜搜</a></li>
 <li><a href="http://bt588.cc/" target="_blank">BT588</a></li>
-<li><a href="http://www.9kbt.com/" target="_blank">BT1280</a></li>
-<li><a href="http://www.btmeet.net/" target="_blank">Btbook</a></li>
+<li><a href="http://www.kx1024.com/" target="_blank">BT1280</a></li>
+<li><a href="http://www.btmeet.org/" target="_blank">Btbook</a></li>
 				    </ul>
 		</div>
 		</div>
