--- a/index.html
+++ b/index.html
@@ -238,6 +238,8 @@
 <li><a href="http://hongxingme.com/" target="_blank">红杏视频</a></li>
 <li><a href="http://mymmv2.com/" target="_blank">V2视频</a></li>
 <li><a href="http://d8lulu.com/" target="_blank">D8视频</a></li>
+<li><a href="http://www.langziav.top/" target="_blank">浪子AV电影</a></li>
+<li><a href="http://www.chushui69.com/" target="_blank">初水视频</a></li>
 <li><a href="http://sae8.info/1.php" target="_blank">sae8</a></li>
 <li><a href="http://www.91av.club/" target="_blank">91AV俱乐部</a></li>
 <li><a href="http://www.luduobao.in/" target="_blank">撸多宝</a></li>
@@ -491,6 +493,7 @@
 		<ul>
 <li><a href="https://iyd2017.com/bbs/?fromuid=574073" target="_blank">欲望之都</a></li>
 <li><a href="http://www.fu31.com/" target="_blank">互撸娃福利</a></li>
+<li><a href="http://www.fou3.com/" target="_blank">爬花楼</a></li>
 <li><a href="http://www.39ye.com/?fromuid=54648" target="_blank">爱妻俱乐部</a></li>
 <li><a href="http://192.161.172.130/forum.php?fromuid=3479" target="_blank">欢乐夫妻</a></li>
 <li><a href="http://www.fu31.com/" target="_blank">互撸娃福利</a></li>
