--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<strong><a name="/3/">综合论坛</a></strong><strong style="padding:0 238px;color:#FF9900;font-size:15px;font-family:Microsoft YaHei;">蓝色小导航最新地址：<a href="http://dear.gq" target="_blank"><span style="color:#2bf7c0;">dear.gq</span></a> <a href="http://boat.ml" target="_blank"><span style="color:#2bf7c0;">boat.ml</span></a> <a href="http://hand.gq" target="_blank"><span style="color:#2bf7c0;">hand.gq</span></a></strong> 
 		<div class="linkl">
 		<ul>
-<li><a href="http://cl.fatt.pw/index.php?u=296710&ext=96e5d" target="_blank">草榴社区</a></li>
+<li><a href="http://cl.beett.pw/index.php?u=296710&ext=96e5d" target="_blank">草榴社区</a></li>
 <li><a href="http://give.ga/" target="_blank">福利资源</a></li>
 <li><a href="http://papa60.com/?fromuid=8" target="_blank">啪啪社区</a></li>
 <li><a href="http://th47.net/?fromuid=5495" target="_blank">淘花社区</a></li>
@@ -145,10 +145,10 @@
 <li><a href="http://taohuabt.net/?fromuid=70941" target="_blank">桃花族</a></li>
 <li><a href="http://girlclub8.com/?fromuid=1096417" target="_blank">杏吧有你</a></li>
 <li><a href="http://cl.longbiao.wang/index.php?u=296710&ext=96e5d" target="_blank">草榴社区2</a></li>
-<li><a href="http://xbxbxb.me/index.php?u=296710&ext=96e5d" target="_blank">草榴社区3</a></li>
+<li><a href="http://cc.jjjyyy.org/index.php?u=296710&ext=96e5d" target="_blank">草榴社区3</a></li>
 <li><a href="http://tmdkao.com/index.php?u=296710&ext=96e5d" target="_blank">草榴社区4</a></li>
 <li><a href="http://c6.d5j.biz/index.php?u=296710&ext=96e5d" target="_blank">草榴社区5</a></li>
-<li><a href="http://cl.h5e.biz/index.php?u=296710&ext=96e5d" target="_blank">草榴社区6</a></li>
+<li><a href="http://dz.l3j.biz/index.php?u=296710&ext=96e5d" target="_blank">草榴社区6</a></li>
 <li><a href="http://dz.c7e.biz/index.php?u=296710&ext=96e5d" target="_blank">草榴社区7</a></li>
 				    </ul>
 		</div>
@@ -305,12 +305,15 @@
 <li><a href="http://avpapa.co/" target="_blank">Avpapa</a></li>
 <li><a href="http://www.5xsq123.com/" target="_blank">5X社区</a></li>
 <li><a href="http://www.yeshemao520.top/" target="_blank">夜涩猫</a></li>
-<li><a href="http://www.99ff0.com/" target="_blank">久久热视频</a></li>
+<li><a href="http://www.99ff1.com/" target="_blank">久久热视频</a></li>
 <li><a href="http://www.rxl365.com/" target="_blank">任性撸</a></li>
 <li><a href="http://www.aotu9.com/" target="_blank">凹凸视频</a></li>
 <li><a href="http://www.lu2363.com/" target="_blank">撸尔山</a></li>
 <li><a href="http://qjj22.com/" target="_blank">骑姐姐</a></li>
 <li><a href="http://www.liuliucao.tv/" target="_blank">榴榴草</a></li>
+<li><a href="http://www.u1k.win/" target="_blank">优衣库</a></li>
+<li><a href="http://cn.btmao.bid/" target="_blank">BT猫自拍</a></li>
+<li><a href="http://www.5557t.com/" target="_blank">用力撸</a></li>
 <li><a href="http://www.jimohd.com/" target="_blank">寂寞草</a></li>
 <li><a href="http://www.zz1212.com/" target="_blank">姐姐要爱</a></li>
 <li><a href="http://www.aikan888.com/" target="_blank">爱看视频</a></li>
@@ -578,7 +581,7 @@
 		<strong><a name="/11/">島國情报</a></strong>
 		<div class="linkl">
 		<ul>
-<li><a href="http://www.javl10.com/cn/" target="_blank">JavLibrary</a></li>
+<li><a href="http://j12lib.com/cn/" target="_blank">JavLibrary</a></li>
 <li><a href="https://www.javbus.info/" target="_blank">JavBus</a></li>
 <li><a href="http://www.51shl.xyz/" target="_blank">色狐狸</a></li>
 <li><a href="http://www.uggdiy.com/" target="_blank">求番号吧</a></li>
