--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 <li><a href="http://www.thai-pix.com/" target="_blank">Thai-Pix</a></li>
 <li><a href="http://www.91szs.com/" target="_blank">91涩中涩</a></li>
 <li><a href="http://aa2n.com/" target="_blank">三涩论坛</a></li>
-<li><a href="http://taohuabt.net/?fromuid=70941" target="_blank">桃花族</a></li>
+<li><a href="http://taohuabt.org/?fromuid=70941" target="_blank">桃花族</a></li>
 <li><a href="http://girlclub8.com/?fromuid=1096417" target="_blank">杏吧有你</a></li>
 <li><a href="http://cl.longbiao.wang/index.php?u=296710&ext=96e5d" target="_blank">草榴社区2</a></li>
 <li><a href="http://cc.jjjyyy.org/index.php?u=296710&ext=96e5d" target="_blank">草榴社区3</a></li>
@@ -218,6 +218,10 @@
 <li><a href="http://www.jpmdh.info/" target="_blank">金瓶梅福利导航</a></li>
 <li><a href="http://91xfdh.com/" target="_blank">91性福导航</a></li>
 <li><a href="http://www.ds555.cc/" target="_blank">男人福利導航</a></li>
+<li><a href="http://www.yidianpai.com/" target="_blank">一点拍导航</a></li>
+<li><a href="http://www.muguadaohang.com/" target="_blank">木瓜导航</a></li>
+<li><a href="http://www.sebadh.com/" target="_blank">色吧福利导航</a></li>
+<li><a href="http://www.lvsefldh.com/" target="_blank">绿色福利导航</a></li>
                     </ul>
 		</div>
 		</div>
@@ -240,6 +244,7 @@
 <li><a href="http://mymmv2.com/" target="_blank">V2视频</a></li>
 <li><a href="http://d8lulu.com/" target="_blank">D8视频</a></li>
 <li><a href="http://www.rr1919.com/" target="_blank">丁香五月</a></li>
+<li><a href="http://www.repiantv.top/" target="_blank">热片大电影</a></li>
 <li><a href="http://www.langziav.top/" target="_blank">浪子AV电影</a></li>
 <li><a href="http://www.chushui69.com/" target="_blank">初水视频</a></li>
 <li><a href="http://sae8.info/1.php" target="_blank">sae8</a></li>
@@ -249,6 +254,7 @@
 <li><a href="http://www.rraiav.com/" target="_blank">夜夜爱AV</a></li>
 <li><a href="http://www.3pfun.ga/" target="_blank">3pfun</a></li>
 <li><a href="http://ziyule.xyz/" target="_blank">自娱乐</a></li>
+<li><a href="http://www.sesexia.com/" target="_blank">超快色色下</a></li>
 <li><a href="http://www.taoluyingyuan.com/" target="_blank">套路影院</a></li>
 <li><a href="http://www.wpzy7.com/" target="_blank">超碰</a></li>
 <li><a href="http://9388av.com/" target="_blank">撸你妹吖</a></li>
@@ -292,7 +298,7 @@
 <li><a href="http://go.60990.biz/" target="_blank">蝌蚪窝</a></li>
 <li><a href="https://www.uuzy03.com/" target="_blank">悠色资源网</a></li>
 <li><a href="http://souav111.com/" target="_blank">搜AV视频</a></li>
-<li><a href="http://www.51luav.com/" target="_blank">51撸AV在线</a></li>
+<li><a href="http://www.51lulu.info/" target="_blank">51撸AV在线</a></li>
 <li><a href="http://lvn77.com/" target="_blank">撸女神</a></li>
 <li><a href="http://hhs02.com/" target="_blank">花和尚</a></li>
 <li><a href="http://www.meizyw.com/" target="_blank">mm资源网</a></li>
@@ -685,12 +691,12 @@
 		<div class="linkl">
 		<ul>
 <li><a href="http://lsjtupian.com/" target="_blank">老司机图片</a></li>
+<li><a href="http://www.caoliufan.com/" target="_blank">潮榴番</a></li>
 <li><a href="http://www.3515.pw/" target="_blank">爱心社</a></li>
 <li><a href="http://www.bzjkzc.com/" target="_blank">福利gif出处</a></li>
 <li><a href="http://www.bvfpei.com/" target="_blank">邪恶GIF</a></li>
 <li><a href="http://www.nucvrj.com/" target="_blank">美女生活照</a></li>
 <li><a href="http://www.ixieegif.com/" target="_blank">哆乐动图</a></li>
-<li><a href="http://www.caoliufan.com/" target="_blank">潮榴番</a></li>
 <li><a href="http://91.t9m.space/?fromuid=697480" target="_blank">91自拍论坛</a></li>
 <li><a href="http://www.lu46.com/?fromuid=82145" target="_blank">街拍帮</a></li>
 <li><a href="http://www.jp95.com/?fromuid=672975" target="_blank">街拍第一站</a></li>
