--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		<div class="linkl">
 		<ul>
 <li><a href="http://cl.beett.pw/index.php?u=296710&ext=96e5d" target="_blank">草榴社区</a></li>
-<li><a href="http://give.ga/" target="_blank">福利资源</a></li>
+<li><a href="http://lady.cf/" target="_blank">福利资源</a></li>
 <li><a href="http://papa60.com/?fromuid=8" target="_blank">啪啪社区</a></li>
 <li><a href="http://th47.net/?fromuid=5495" target="_blank">淘花社区</a></li>
 <li><a href="http://lovecityclub.com/bt/?u=701541" target="_blank">爱城</a></li>
@@ -66,6 +66,7 @@
 <li><a href="http://lu6vip.com/" target="_blank">撸6VIP网</a></li>
 <li><a href="http://www.bsm5.info/" target="_blank">本色猫福利站</a></li>
 <li><a href="http://www.yesir.info/forum.php" target="_blank">夜色精選論壇</a></li>
+<li><a href="http://www.ppzy8.com/" target="_blank">啪啪资源吧</a></li>
 <li><a href="http://www.465ip.com/" target="_blank">大香蕉</a></li>
 <li><a href="http://www.mf28.xyz/" target="_blank">蜜蜂社区</a></li>
 <li><a href="http://twhav.com/?fromuid=73855" target="_blank">天空论坛</a></li>
@@ -244,6 +245,7 @@
 <li><a href="http://mymmv2.com/" target="_blank">V2视频</a></li>
 <li><a href="http://d8lulu.com/" target="_blank">D8视频</a></li>
 <li><a href="http://www.rr1919.com/" target="_blank">丁香五月</a></li>
+<li><a href="http://www.ziyetvv.com/" target="_blank">紫夜AV电影</a></li>
 <li><a href="http://www.repiantv.top/" target="_blank">热片大电影</a></li>
 <li><a href="http://www.langziav.top/" target="_blank">浪子AV电影</a></li>
 <li><a href="http://www.chushui69.com/" target="_blank">初水视频</a></li>
