--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 <link rel="stylesheet" type="text/css" href="css.css" />
 </head>
 <body>
+<script type="text/javascript" src="jsized.snow.min.js"></script>
+<script>
+    createSnow('', 60);
+</script>
 <script>
 (function(){
     var bp = document.createElement('script');
