--- a/link.html
+++ b/link.html
@@ -8,7 +8,11 @@
 <meta name="viewport" content="width=device-width"/>
 <link rel="stylesheet" type="text/css" href="css.css" />
 </head>
-<body> 
+<body>
+<script type="text/javascript" src="jsized.snow.min.js"></script>
+<script>
+    createSnow('', 60);
+</script> 
 <div class="link">
 	<div class="list">
 				<strong><a href="/" target="_self"><font color="#ffffff">返回首页</font></a></strong>
