--- a/notice.html
+++ b/notice.html
@@ -9,6 +9,10 @@
 <link rel="stylesheet" type="text/css" href="css.css" />
 </head>
 <body>
+<script type="text/javascript" src="jsized.snow.min.js"></script>
+<script>
+    createSnow('', 60);
+</script>
 <div class="link">
 	<div class="list">
 				<strong><a href="/" target="_self"><font color="#ffffff">返回首页</font></a></strong>
