--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 <!-- 首页 -->
 <html>
 <head>
-<meta charset="utf-8"/>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>蓝色小导航 - 各大网站最新地址</title>
 <meta name="keywords" content="蓝色导航,蓝色小导航,福利导航,福利导航,各大网站地址发布站"/>
 <meta name="description" content="蓝色导航,蓝色小导航,福利导航,福利导航,各大网站地址发布站"/>
-<meta name="viewport" content="width=device-width"/>
 <link rel="stylesheet" type="text/css" href="css.css" />
 </head>
 <body>
-<script type="text/javascript" src="jsized.snow.min.js"></script>
+<script type="text/javascript" content="width=device-width" src="jsized.snow.min.js"></script>
 <script>
     createSnow('', 60);
 </script>
