--- a/ad.html
+++ b/ad.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8"/>
 <title>关于本站</title>
-<meta name="keywords" content="蓝色导航-广告位服务"/>
-<meta name="description" content="蓝色导航-全站广告位招租中"/>
+<meta name="keywords" content="蓝色导航,蓝色小导航,蓝导航,福利导航,最新地址,地址发布页"/>
+<meta name="description" content="蓝色导航,蓝色小导航,蓝导航,福利导航,最新地址,地址发布页"/>
 <meta name="viewport" content="width=device-width"/>
 <link rel="stylesheet" type="text/css" href="css.css" />
 </head>
