--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
 <li><a href="http://girlclub8.com/?fromuid=1096417" target="_blank">杏吧有你</a></li>
 <li><a href="http://cl.longbiao.wang/index.php?u=296710&ext=96e5d" target="_blank">草榴社区2</a></li>
 <li><a href="http://cc.jjjyyy.org/index.php?u=296710&ext=96e5d" target="_blank">草榴社区3</a></li>
-<li><a href="http://tmdkao.com/index.php?u=296710&ext=96e5d" target="_blank">草榴社区4</a></li>
-<li><a href="http://c6.d5j.biz/index.php?u=296710&ext=96e5d" target="_blank">草榴社区5</a></li>
+<li><a href="http://cl.l5j.biz/index.php?u=296710&ext=96e5d" target="_blank">草榴社区4</a></li>
+<li><a href="http://cc.vdgp.org/index.php?u=296710&ext=96e5d" target="_blank">草榴社区5</a></li>
 <li><a href="http://dz.l3j.biz/index.php?u=296710&ext=96e5d" target="_blank">草榴社区6</a></li>
 <li><a href="http://dz.c7e.biz/index.php?u=296710&ext=96e5d" target="_blank">草榴社区7</a></li>
 				    </ul>
@@ -248,6 +248,7 @@
 <li><a href="http://mymmv2.com/" target="_blank">V2视频</a></li>
 <li><a href="http://d8lulu.com/" target="_blank">D8视频</a></li>
 <li><a href="http://www.rr1919.com/" target="_blank">丁香五月</a></li>
+<li><a href="http://www.xigua110.pw/" target="_blank">手机午夜大片</a></li>
 <li><a href="http://www.ziyetvv.com/" target="_blank">紫夜AV电影</a></li>
 <li><a href="http://www.repiantv.top/" target="_blank">热片大电影</a></li>
 <li><a href="http://www.langziav.top/" target="_blank">浪子AV电影</a></li>
@@ -307,7 +308,7 @@
 <li><a href="http://lvn77.com/" target="_blank">撸女神</a></li>
 <li><a href="http://hhs02.com/" target="_blank">花和尚</a></li>
 <li><a href="http://www.meizyw.com/" target="_blank">mm资源网</a></li>
-<li><a href="http://www.avtb55.com/" target="_blank">AV淘宝</a></li>
+<li><a href="http://www.avtb66.com/" target="_blank">AV淘宝</a></li>
 <li><a href="http://www.3555ss.com/" target="_blank">私库AV</a></li>
 <li><a href="http://www.xxoo.tm/" target="_blank">男人本涩</a></li>
 <li><a href="http://a7s7.com/" target="_blank">Sex169影城</a></li>
@@ -317,7 +318,7 @@
 <li><a href="http://www.5xsq123.com/" target="_blank">5X社区</a></li>
 <li><a href="http://www.yeshemao520.top/" target="_blank">夜涩猫</a></li>
 <li><a href="http://www.99ff1.com/" target="_blank">久久热视频</a></li>
-<li><a href="http://www.rxl365.com/" target="_blank">任性撸</a></li>
+<li><a href="http://renxinglu365.com/" target="_blank">任性撸</a></li>
 <li><a href="http://www.aotu9.com/" target="_blank">凹凸视频</a></li>
 <li><a href="http://www.lu2363.com/" target="_blank">撸尔山</a></li>
 <li><a href="http://qjj22.com/" target="_blank">骑姐姐</a></li>
@@ -329,7 +330,7 @@
 <li><a href="http://www.zz1212.com/" target="_blank">姐姐要爱</a></li>
 <li><a href="http://www.aikan888.com/" target="_blank">爱看视频</a></li>
 <li><a href="http://aishangvideo.com/" target="_blank">爱上视频</a></li>
-<li><a href="http://www.vod30.com/" target="_blank">VOD视频</a></li>
+<li><a href="http://www.vod35.com/" target="_blank">VOD视频</a></li>
 <li><a href="http://www.36gao.com/" target="_blank">haodiaose</a></li>
 <li><a href="http://vod23.com/" target="_blank">VOD视屏</a></li>
 <li><a href="http://www.avtai3.com/" target="_blank">AvTai</a></li>
@@ -344,12 +345,12 @@
 <li><a href="http://www.avtai3.com/" target="_blank">AvTai</a></li>
 <li><a href="https://www.w832.com/" target="_blank">202z</a></li>
 <li><a href="http://www.fcw.xxx/" target="_blank">废柴网</a></li>
-<li><a href="http://www.twav12.com/" target="_blank">AV中文</a></li>
+<li><a href="http://www.twav13.com/" target="_blank">AV中文</a></li>
 <li><a href="http://kuav.tv/" target="_blank">高清在线AV</a></li>
 <li><a href="http://www.youppp.com/" target="_blank">有B吗？</a></li>
 <li><a href="http://www.av8d.co/" target="_blank">琪琪涩原</a></li>
 <li><a href="http://www.777vid.com/" target="_blank">PLAY 视频</a></li>
-<li><a href="http://www.3jiuseteng.com/" target="_blank">九涩腾</a></li>
+<li><a href="http://www.12jiuseteng.com/" target="_blank">九涩腾</a></li>
 <li><a href="http://www.jav2be.com/" target="_blank">绝色媚影</a></li>
 <li><a href="http://www.meimei7.com/" target="_blank">在线手机视频</a></li>
 <li><a href="http://www.jav513.com/" target="_blank">宅男频道</a></li>
