--- a/link.html
+++ b/link.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8"/>
 <title>新站提交</title>
-<meta name="keywords" content="网址大全,最新地址发布页"/>
-<meta name="description" content="草榴社区,xiao77,爱城,av狼,性吧,夜色王朝,第一会所等各大网站最新地址发布站。"/>
+<meta name="keywords" content="蓝色导航,蓝色小导航,蓝导航,福利导航,最新地址,地址发布页"/>
+<meta name="description" content="蓝色导航,蓝色小导航,蓝导航,福利导航,最新地址,地址发布页"/>
 <meta name="viewport" content="width=device-width"/>
 <link rel="stylesheet" type="text/css" href="css.css" />
 </head>
@@ -30,7 +30,8 @@
 
 <div style="text-align:center;font-family:SimHei;font-size:16px;color:#8a69ea;"><strong>
 <p>欢迎大家在下面分享好的网站，也欢迎各大站长和本站友链，申请收录前，请先在您的网站首页设置本站链接为友情链接</p>
-<p>本站链接：http://2.ae3.info/  名称：蓝色导航</p>
+<p>本站链接：<font color="#00CD00">http://3.c60.tw/</font>  站名：<font color="#00CD00">蓝色小导航</font></p>
+<p><font color="#FF0000">注：添加本站友链时，请使用以上地址，链接本站其他地址一律不收录，谢谢合作</font></p>
 
 </strong></div>
 
