--- a/index.html
+++ b/index.html
@@ -2,16 +2,27 @@
 <!-- 首页 -->
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta charset="utf-8"/>
 <title>蓝色小导航 - 各大网站最新地址</title>
 <meta name="keywords" content="蓝色导航,蓝色小导航,福利导航,福利导航,各大网站地址发布站"/>
 <meta name="description" content="蓝色导航,蓝色小导航,福利导航,福利导航,各大网站地址发布站"/>
+<meta name="viewport" content="width=device-width"/>
 <link rel="stylesheet" type="text/css" href="css.css" />
 </head>
 <body>
-<script type="text/javascript" content="width=device-width" src="jsized.snow.min.js"></script>
 <script>
-    createSnow('', 60);
+(function(){
+    var bp = document.createElement('script');
+    var curProtocol = window.location.protocol.split(':')[0];
+    if (curProtocol === 'https') {
+        bp.src = 'https://zz.bdstatic.com/linksubmit/push.js';        
+    }
+    else {
+        bp.src = 'http://push.zhanzhang.baidu.com/push.js';
+    }
+    var s = document.getElementsByTagName("script")[0];
+    s.parentNode.insertBefore(bp, s);
+})();
 </script>
 <div class="link">
 	<div class="list">
@@ -95,7 +106,7 @@
 <li><a href="http://www.piring.com/bbs/tcn/?fromuid=2061069" target="_blank">痴汉俱乐部</a></li>
 <li><a href="http://108.171.242.244/" target="_blank">MyHd1080</a></li>
 <li><a href="http://w1.vz05.biz/pw/" target="_blank">1024核工厂</a></li>
-<li><a href="http://www.lsg258.cc/?fromuid=1577" target="_blank">老司机论坛</a></li>
+<li><a href="http://www.51youba.cc/?fromuid=1577" target="_blank">老司机论坛</a></li>
 <li><a href="http://redditlist.com/nsfw" target="_blank">redditlist</a></li>
 <li><a href="http://45.32.51.95/?fromuid=2571826" target="_blank">捷克论坛</a></li>
 <li><a href="http://www.stiantang.info/?fromuid=24994" target="_blank">涩天堂</a></li>
@@ -260,8 +271,6 @@
 <li><a href="http://www.56avs.us/" target="_blank">沃流视频</a></li>
 <li><a href="http://www.youzzjj.xyz/" target="_blank">优优在线AV</a></li>
 <li><a href="http://www.fx1200.com/" target="_blank">咪咪影院</a></li>
-<li><a href="http://meisezx.com/" target="_blank">魅色在线</a></li>
-<li><a href="http://www.fhmmav.com/" target="_blank">粉红妹妹</a></li>
 <li><a href="http://avlu.biz/" target="_blank">撸啊撸</a></li>
 <li><a href="http://www.ikanav.com/" target="_blank">爱看AV</a></li>
 <li><a href="http://www.db66.cc/" target="_blank">AV在线视频</a></li>
@@ -289,7 +298,6 @@
 <li><a href="http://www.99zzpp.com/" target="_blank">99自拍</a></li>
 <li><a href="http://go.60990.biz/" target="_blank">蝌蚪窝</a></li>
 <li><a href="https://www.uuzy03.com/" target="_blank">悠色资源网</a></li>
-<li><a href="http://souav111.com/" target="_blank">搜AV视频</a></li>
 <li><a href="http://www.51lulu.info/" target="_blank">51撸AV在线</a></li>
 <li><a href="http://lvn77.com/" target="_blank">撸女神</a></li>
 <li><a href="http://hhs02.com/" target="_blank">花和尚</a></li>
@@ -315,20 +323,20 @@
 <li><a href="http://www.jimohd.com/" target="_blank">寂寞草</a></li>
 <li><a href="http://www.zz1212.com/" target="_blank">姐姐要爱</a></li>
 <li><a href="http://www.aikan888.com/" target="_blank">爱看视频</a></li>
-<li><a href="http://aishangvideo.com/" target="_blank">爱上视频</a></li>
 <li><a href="http://www.vod35.com/" target="_blank">VOD视频</a></li>
 <li><a href="http://www.36gao.com/" target="_blank">haodiaose</a></li>
-<li><a href="http://vod23.com/" target="_blank">VOD视屏</a></li>
 <li><a href="http://www.avtai3.com/" target="_blank">AvTai</a></li>
 <li><a href="http://www.95gav.com/" target="_blank">91GAV</a></li>
 <li><a href="http://8833hao.com/" target="_blank">995hao</a></li>
 <li><a href="http://caoporn.pink/" target="_blank">CaoPorn</a></li>
 <li><a href="http://www.tuxse.com/" target="_blank">超碰在线</a></li>
 <li><a href="https://www.189df.com/" target="_blank">东方AV在线</a></li>
+<li><a href="http://meisezx.com/" target="_blank">魅色在线</a></li>
+<li><a href="http://www.fhmmav.com/" target="_blank">粉红妹妹</a></li>
+<li><a href="http://zhs.lxxlx.com/" target="_blank">LXXLX</a></li>
 <li><a href="http://www.vid999.com/" target="_blank">vid999</a></li>
 <li><a href="http://huaidushi.info/" target="_blank">坏都市</a></li>
 <li><a href="http://www.600zyz.com/" target="_blank">97资源站</a></li>
-<li><a href="http://www.avtai3.com/" target="_blank">AvTai</a></li>
 <li><a href="https://www.w832.com/" target="_blank">202z</a></li>
 <li><a href="http://www.fcw.xxx/" target="_blank">废柴网</a></li>
 <li><a href="http://www.twav13.com/" target="_blank">AV中文</a></li>
@@ -337,8 +345,8 @@
 <li><a href="http://www.av8d.co/" target="_blank">琪琪涩原</a></li>
 <li><a href="http://www.777vid.com/" target="_blank">PLAY 视频</a></li>
 <li><a href="http://www.12jiuseteng.com/" target="_blank">九涩腾</a></li>
-<li><a href="http://www.jav2be.com/" target="_blank">绝色媚影</a></li>
 <li><a href="http://www.meimei7.com/" target="_blank">在线手机视频</a></li>
+<li><a href="https://avhd101.com/" target="_blank">AVHD101</a></li>
 <li><a href="http://www.jav513.com/" target="_blank">宅男频道</a></li>
 <li><a href="http://www.megaline.co/Cazn2" target="_blank">91porn</a></li>
 				    </ul>
