--- a/notice.html
+++ b/notice.html
@@ -5,13 +5,10 @@
 <title>网站公告</title>
 <meta name="keywords" content="蓝色导航,蓝色小导航,蓝导航,福利导航,最新地址,地址发布页"/>
 <meta name="description" content="蓝色导航,蓝色小导航,蓝导航,福利导航,最新地址,地址发布页"/>
+<meta name="viewport" content="width=device-width"/>
 <link rel="stylesheet" type="text/css" href="css.css" />
 </head>
 <body>
-<script type="text/javascript" src="jsized.snow.min.js"></script>
-<script>
-    createSnow('', 60);
-</script>
 <div class="link">
 	<div class="list">
 				<strong><a href="/" target="_self"><font color="#ffffff">返回首页</font></a></strong>
