--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 <li><a href="http://www.porna5.com/" target="_blank">Porn采集者</a></li>
 <li><a href="http://lu6vip.com/" target="_blank">撸6VIP网</a></li>
 <li><a href="http://www.bsm5.info/" target="_blank">本色猫福利站</a></li>
+<li><a href="http://xinghao.ml/" target="_blank">性好论坛</a></li>
 <li><a href="http://www.yesir.info/forum.php" target="_blank">夜色精選論壇</a></li>
 <li><a href="http://www.ppzy8.com/" target="_blank">啪啪资源吧</a></li>
 <li><a href="http://www.465ip.com/" target="_blank">大香蕉</a></li>
@@ -148,7 +149,7 @@
 <li><a href="http://cl.longbiao.wang/index.php?u=296710&ext=96e5d" target="_blank">草榴社区2</a></li>
 <li><a href="http://cc.jjjyyy.org/index.php?u=296710&ext=96e5d" target="_blank">草榴社区3</a></li>
 <li><a href="http://cl.l5j.biz/index.php?u=296710&ext=96e5d" target="_blank">草榴社区4</a></li>
-<li><a href="http://cc.vdgp.org/index.php?u=296710&ext=96e5d" target="_blank">草榴社区5</a></li>
+<li><a href="http://m.ocoaoo.com/index.php?u=296710&ext=96e5d" target="_blank">草榴社区5</a></li>
 <li><a href="http://dz.l3j.biz/index.php?u=296710&ext=96e5d" target="_blank">草榴社区6</a></li>
 <li><a href="http://dz.c7e.biz/index.php?u=296710&ext=96e5d" target="_blank">草榴社区7</a></li>
 				    </ul>
@@ -162,8 +163,8 @@
 		<ul>
 <li><a href="http://5genvpiao.com/" target="_blank">五姑娘导航</a></li>
 <li><a href="http://landh.club/" target="_blank">蓝导航</a></li>
+<li><a href="http://500dh.cc/" target="_blank">500导航</a></li>
 <li><a href="http://www.bagunian.info/" target="_blank">八姑娘导航</a></li>
-<li><a href="http://g.e20.ru/" target="_blank">绿色小导航</a></li>
 <li><a href="http://doufu2.com/" target="_blank">豆福色导航</a></li> 
 <li><a href="http://www.xinfuli.info/" target="_blank">新福利导航</a></li>
 <li><a href="http://www.xiushe.info/" target="_blank">羞射福利导航</a></li>                            
@@ -175,7 +176,6 @@
 <li><a href="http://www.haoavdh.com/" target="_blank">找AV导航</a></li>
 <li><a href="http://www.javavdh.com/" target="_blank">Javav导航</a></li>
 <li><a href="http://att12.com/" target="_blank">A天堂导航</a></li>
-<li><a href="http://500dh.cc/" target="_blank">500导航</a></li>
 <li><a href="http://www.dabodh.com/" target="_blank">大波导航</a></li>
 <li><a href="http://74fuli.net/" target="_blank">骑士福利导航</a></li>
 <li><a href="http://bigefuli.com/" target="_blank">逼格福利导航</a></li>
@@ -223,6 +223,7 @@
 <li><a href="http://www.muguadaohang.com/" target="_blank">木瓜导航</a></li>
 <li><a href="http://www.sebadh.com/" target="_blank">色吧福利导航</a></li>
 <li><a href="http://www.lvsefldh.com/" target="_blank">绿色福利导航</a></li>
+<li><a href="http://g.e20.ru/" target="_blank">绿色小导航</a></li>
                     </ul>
 		</div>
 		</div>
