--- a/link.html
+++ b/link.html
@@ -27,7 +27,7 @@
 <div style="text-align:center;font-family:SimHei;font-size:16px;color:#8a69ea;"><strong>
 <p>欢迎大家在下面分享好的网站，也欢迎各大站长和本站友链，申请收录前，请先在您的网站首页设置本站链接为友情链接</p>
 <p>本站链接：<font color="#00CD00">http://3.c60.tw/</font>  站名：<font color="#00CD00">蓝色小导航</font></p>
-<p><font color="#FF0000">注：添加本站友链时，请使用以上地址，链接本站其他地址一律不收录，谢谢合作</font></p>
+<p><font color="#FF0000">注：添加本站友链时，请原样使用以上地址，链接本站其他地址一律不收录，谢谢合作</font></p>
 
 </strong></div>
 
