--- a/index.html
+++ b/index.html
@@ -146,12 +146,11 @@
 <li><a href="http://aa2n.com/" target="_blank">三涩论坛</a></li>
 <li><a href="http://taohuabt.org/?fromuid=70941" target="_blank">桃花族</a></li>
 <li><a href="http://girlclub8.com/?fromuid=1096417" target="_blank">杏吧有你</a></li>
-<li><a href="http://cl.longbiao.wang/index.php?u=296710&ext=96e5d" target="_blank">草榴社区2</a></li>
-<li><a href="http://cc.jjjyyy.org/index.php?u=296710&ext=96e5d" target="_blank">草榴社区3</a></li>
-<li><a href="http://cl.l5j.biz/index.php?u=296710&ext=96e5d" target="_blank">草榴社区4</a></li>
-<li><a href="http://m.ocoaoo.com/index.php?u=296710&ext=96e5d" target="_blank">草榴社区5</a></li>
-<li><a href="http://dz.l3j.biz/index.php?u=296710&ext=96e5d" target="_blank">草榴社区6</a></li>
-<li><a href="http://dz.c7e.biz/index.php?u=296710&ext=96e5d" target="_blank">草榴社区7</a></li>
+<li><a href="http://xbxbxb.me/index.php?u=296710&ext=96e5d" target="_blank">草榴社区2</a></li>
+<li><a href="http://m.ocoaoo.com/index.php?u=296710&ext=96e5d" target="_blank">草榴社区3</a></li>
+<li><a href="http://cc.jjjyyy.org/index.php?u=296710&ext=96e5d" target="_blank">草榴社区4</a></li>
+<li><a href="http://m.ttqflc.com/index.php?u=296710&ext=96e5d" target="_blank">草榴社区5</a></li>
+<li><a href="http://cc.vpdvl.org/index.php?u=296710&ext=96e5d" target="_blank">草榴社区6</a></li>
 				    </ul>
 		</div>
 		</div>
@@ -505,7 +504,7 @@
 		<strong><a name="/9/">信息交友</a></strong>
 		<div class="linkl">
 		<ul>
-<li><a href="https://iyd2017.com/bbs/?fromuid=574073" target="_blank">欲望之都</a></li>
+<li><a href="http://iywzd.me/s/?fromuid=574073" target="_blank">欲望之都</a></li>
 <li><a href="http://www.fu31.com/" target="_blank">互撸娃福利</a></li>
 <li><a href="http://www.fou3.com/" target="_blank">爬花楼</a></li>
 <li><a href="http://www.39ye.com/?fromuid=54648" target="_blank">爱妻俱乐部</a></li>
